[fix] adjust height with new locale selector on mobile

--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -9535,7 +9535,7 @@ p {
 
 @media (max-width: 992px) {
   .page-content {
-    padding-top: 70px;
+    padding-top: 115px;
   }
 }
 
@@ -9731,7 +9731,7 @@ p {
 
 @media (max-width: 992px) {
   #slides {
-    margin-top: 70px;
+    margin-top: 115px;
   }
 }
 
@@ -10303,7 +10303,7 @@ p {
 
 @media (max-width: 992px) {
   .page-title {
-    margin-top: 70px;
+    margin-top: 115px;
   }
 }
 
